# enterprise-agent

./: .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  advanced_rag_system.py  agent_knowledge_review.txt  app.py  app_debug.py  app_simple.py  async_executor.py  async_rag_system.py  build_vector_store.py  conftest.py  demo_multimodal_features.py  demo_optimized_features.py  enterprise_agent.py  guardrails.py  knowledge_base.txt  langgraph_agent.py  langgraph_agent_simple.py  langgraph_agent_with_memory.py  main.py  mcp_client.py  mcp_servers.yaml  monitoring_config.py  monitoring_system.py  multimodal_support.py  optimization_phase1_complete.md  project_knowledge_guide.md  project_optimization_plan.txt  pyproject.toml  rag_agent.py  requirements.txt  resilience.py  skill_manager.py  study.py  test_async_integration.py  test_bm25.py  (+15 more)
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
data/: cmcc_300_knowledge.txt  cmcc_consumer_faq.txt  pdf_extracted.txt
evaluation/: __init__.py  eval_runner.py  metrics.py  test_queries.json
knowledge_data/: cmcc_knowledge_labeled.json
mcp_servers/: __init__.py  billing_server.py  ticket_server.py
project_knowledge/: 01_agent_basics.md  02_langchain_tools.md  03_rag_technology.md  04_langgraph_workflow.md  05_async_performance.md  06_monitoring_system.md  07_multimodal_support.md  08_engineering_practices.md  09_skill_system.md  10_mcp_tools.md
repositories/: __init__.py  base.py  memory_repo.py
scripts/: label_cmcc_data.py
skills/: 5g-package.md  broadband.md  complaint.md  international-roaming.md
tests/: test_advanced_rag.py  test_agent.py  test_agent_extended.py  test_core.py  test_enterprise_agent.py  test_evaluation.py  test_guardrails.py  test_mcp_client.py  test_repositories.py  test_repositories_edge.py  test_resilience.py
