[project]
name = "cmcc-agent"
version = "1.2.0"
description = "中国移动智能客服 Agent - LangGraph ReAct + RAG + MCP + Skill"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "gcddxd12"}
]
keywords = ["agent", "langgraph", "rag", "mcp", "customer-service", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
