[project]
name = "cmcc-agent"
version = "1.2.0"
description = "中国移动智能客服 Agent - LangGraph ReAct + RAG + MCP + Skill"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "gcddxd12"}
]
keywords = ["agent", "langgraph", "rag", "mcp", "customer-service", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "tests/*",
    "mcp_servers/*",
    "test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 1

[tool.ruff]
target-version = "py310"
exclude = [".venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"monitoring_system.py" = ["ALL"]
"monitoring_config.py" = ["ALL"]
"multimodal_support.py" = ["ALL"]
"mcp_servers/*" = ["ALL"]
"scripts/*" = ["ALL"]
"test_*.py" = ["ALL"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [".venv", "monitoring_system\\.py", "monitoring_config\\.py", "multimodal_support\\.py", "mcp_servers"]
